selfhost/test/typechecker/match/error_nonexhaustive_literal.2.abra
val x = match "abc" {
  "a" => 0
  "b" => 1
}
